feat: Impl ErrorTranslator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rust-i18n = "3"
+strum = { version = "0.26", features = ["derive"] }
+thiserror = "1.0"
