--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,13 @@
 [package]
 name = "i18n_error"
 version = "0.1.0"
+authors = ["Daisuke Ito <daisuke.ito.cs@gmail.com>"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+proc-macro = true
 
 [dependencies]
-rust-i18n = "3"
-strum = { version = "0.26", features = ["derive"] }
-thiserror = "1.0"
-
-[package.metadata.i18n]
-available-locales = ["en", "ja"]
-default-locale = "en"
-load-path = "locales"
+syn = { version = "2.0.46", features = ["full"] }
+proc-macro2 = "1.0.74"
+quote = "1.0.35"
