--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 authors = ["Daisuke Ito <daisuke.ito.cs@gmail.com>"]
 edition = "2021"
 
-[lib]
-proc-macro = true
-
 [dependencies]
-syn = { version = "2.0.46", features = ["full"] }
-proc-macro2 = "1.0.74"
-quote = "1.0.35"
+i18n_error_impl = { path = "impl" }
+strum = { version = "0.26", features = ["derive"] }
+
+[dev-dependencies]
+
+[workspace]
+members = ["impl", "playground"]
