--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ strum = { version = "0.26", features = ["derive"] }
 [dev-dependencies]
 
 [workspace]
-members = ["impl", "playground"]
+members = ["impl", "example"]
