--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -13,6 +13,6 @@ i18n_error = { path = "../" }
 test-case = "3.3.1"
 
 [package.metadata.i18n]
-available-locales = ["en", "ja"]
+available-locales = ["en", "fr", "ja"]
 default-locale = "en"
 load-path = "locales"
