--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "i18n_error"
 version = "0.1.0"
+authors = ["Daisuke Ito <daisuke.ito.cs@gmail.com>"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+i18n_error_impl = { path = "impl" }
+strum = { version = "0.26", features = ["derive"] }
+
+[dev-dependencies]
+
+[workspace]
+members = ["impl", "example"]
