--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ i18n_error_impl = { path = "impl" }
 strum = { version = "0.26", features = ["derive"] }
 
 [dev-dependencies]
+rust-i18n = "3"
+test-case = "3.3.1"
 
 [workspace]
-members = ["impl", "example"]
+members = ["impl"]
