--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 repository = "https://github.com/poi2/i18n_error"
 
 [dependencies]
-i18n_error_impl = { path = "impl" }
+i18n_error_impl = { version = "0.1.0", path = "impl" }
 strum = { version = "0.26", features = ["derive"] }
 
 [dev-dependencies]
